# whoa-text

./: .htmlvalidate.json  Cargo.toml  index.html  readme.md
pkg/: package.json  whoa_text.d.ts  whoa_text.js  whoa_text_bg.wasm  whoa_text_bg.wasm.d.ts
res/: a.mtl  h.mtl  o.mtl  w.mtl
res/rvdesign-normalmaps/: credit.md
src/: lib.rs  main.rs  model.rs  resources.rs  texture.rs
src/shaders/: blinnPhong.wgsl  gooch.wgsl  goraud.wgsl  gouraud.wgsl  halftone.wgsl  light.wgsl  rainbow.wgsl  shader.wgsl
